# perceptionx

./: .gitignore  BUILD  MODULE.bazel  annotation.py  lidar_data_gen.py  pyproject.toml  readme.md  show_data.py  show_data_test.py
.github/workflows/: ci.yml
common/: BUILD  common.py  common_test.py
evaluation/: BUILD  evaluation.py  evaluation_test.py  geometry_utils.py  geometry_utils_test.py
qs_datasets/: config.json
qs_datasets/nuscenes/: BUILD  constants.py  dataset_generator.py  pose.py  pose_test.py  readme.md  tmp.py  tools.py
qs_datasets/nuscenes/lidar/: BUILD  MISSING_SCENES.json  config.yaml  frame.py  scenes.py
